<resources>
    <string name="app_name">YouKnowChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="loading">Loading</string>

    <!--    Login-->
    <string name="login_topic">Let\'s keep in touch with friend!</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="incorrect_phone">Incorrect Phone Number</string>
    <string name="logging_in">Logging in</string>

    <!--    Login error-->
    <string name="enter_phone">Please enter the phone number</string>
    <string name="select_country">Please select country</string>
    <string name="enter_password">Please enter the password</string>
    <!--    Network error-->
    <string name="network_error">No Internet Connection</string>
    <string name="network_err_try_again">Please check your internet connection and try to reload.</string>
    <string name="try_again">Try Again</string>
</resources>